k8s-weather/ui/service-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: weatherapp-ui
spec:
  selector:
    app: weatherapp-ui
  ports:
  - port: 3000
    targetPort: http
    protocol: TCP 
    name: http
