k8s-weather/ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weatherapp-ui-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mostafaa-bdelmohsen-blog.online
      secretName: weatherapp-ui-tls
  rules:
    - host: mostafaa-bdelmohsen-blog.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weatherapp-ui
                port:
                  number: 3000
